<resources>
    <string name="app_name">Quiet Zones</string>
    <string name="addZone">Add</string>
    <string name="settings">Settings</string>
    <string name="removeZone">Remove</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_Submit">Add</string>
    <string name="radius"><u>Enter Radius (m)</u></string>
    <string name="radius_value_ex">ex. 500</string>
    <string name="name"><u>Enter a name for this location</u></string>
    <string name="name_value_ex">Work</string>
    <string name="title_activity_zone_settings">zoneSettings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_zone_lists">zoneLists</string>
    <string name="save">Save</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="volume">Volume</string>
    <string name="starting_Volume">0</string>
</resources>
